--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Jasa Pembuatan Aquascape,Landscape,Aquatic Semarang" />
-    <title>Aquashine's</title>
+    <title>Aquashine Company | Jasa Pembuatan Aquascape,Landscape,Aquatic Terbaik Di Semarang</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
