--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="scroll-smooth" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/png" href="src/assets/images/logoaqua.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Jasa Pembuatan Aquascape,Landscape,Aquatic Semarang" />
     <title>Aquashine Company | Jasa Pembuatan Aquascape,Landscape,Aquatic Terbaik Di Semarang</title>
